Drop needless .toString().